DP-5351 Fixed alignment of preview panel in print mode. Also fixes DP-5146 (preview panel always displayed with full hight in print mode).

--- a/src/map/containers/preview-panel/_map-preview-panel.scss
+++ b/src/map/containers/preview-panel/_map-preview-panel.scss
@@ -119,11 +119,6 @@ $map-preview-panel-top-print: 8px;
   }
 
   .is-print-mode & {
-    bottom: $map-preview-panel-bottom-print;
-    max-height: none;
-    position: absolute;
-    top: $map-preview-panel-top-print;
-
     &__heading {
       display: none;
     }
